--- a/Live Project-1/index.html
+++ b/Live Project-1/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div id="box1">
-            <video src="video-landing.mp4" id="v1" controls></video>
+            <video src="video-landing.mp4" id="v1" controls autoplay></video>
         </div>
     </div>
 
